# Mashiro

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  todo.md  vcpkg.json
data/: CMakeLists.txt  brush.comp  brush.frag  brush.vert  default.frag  default.vert  screen.frag  screen.vert  tile.frag  tile.vert
data/save/: file.mashiro  file.mashiro.bak
data/shaders/: Brush.comp  brush.comp  canvas.frag  canvas.vert  screen.frag  screen.vert
include/: AABB.h  App.h  AppBis.h  Brush.h  Canvas.h  File.h  Framework.h  Inputs.h  Log.h  Observers.h  Preferences.h  Renderer.h  Stylus.h  Utils.h  Viewport.h  Window.h  resource.h
src/: AABB.cpp  App.cpp  App.h  Brush.cpp  Brush.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Coordinates.h  File.cpp  File.h  Framework.cpp  Inputs.cpp  Log.cpp  Main.cpp  Mashiro.aps  Mashiro.cpp  Mashiro.h  Mashiro.rc  Preferences.cpp  Program.cpp  Program.h  Renderer.cpp  Settings.cpp  Settings.h  Stylus.cpp  Stylus.h  Texture.h  Tile.cpp  Tile.h  Tool.cpp  Tool.h  Utils.cpp  Viewport.cpp  Viewport.h  Window.cpp  mashiro.exe.manifest  pch.h
tests/: CMakeLists.txt  Prompts.cpp  test-fileformat.cpp  test-libpng.cpp  test-libwebp.cpp  test-mashiro-file.cpp  test-png_reader.cpp
